--- a/pages/index/index.wxml
+++ b/pages/index/index.wxml
@@ -25,6 +25,9 @@
             </view>
         </wux-popover>
     </view>
+    <view>
+        <carplate-keyboard></carplate-keyboard>
+    </view>
 </view>
 
 
